--- a/index.html
+++ b/index.html
@@ -32,29 +32,26 @@
 <body>
     <div data-role="page" id="main">  
 
-        <div id="main-map" style="height: 550px;"></div>
+        <div id="main-map" style="height: 80vh;"></div>
         
         <div data-role="content" class="ui-bar-c ui-corner-all ui-shadow" style="margin-bottom: 100px;">
-
-            <div data-role="navbar">
-                <ul>
-                       <li> <a href="#direction" data-icon="location">Direction</a>
-                       <li> <a href="" data-icon="plus">Save</a>
-                       <li> <a href="#nearby" data-icon="shop">Nearby</a>
-                </ul>
-            </div>
 
         </div><!-- /content -->
 
         <div data-role="footer"  id="bottom">
             <div data-role="navbar">
-            <ul>
-                 <li> <a href="#history" data-icon="clock">History</a>
-                 <li> <a href="#saved" data-icon="star">Saved Places</a>
-                 <li> <a href="#help" data-icon="info">Help Center</a>
-            </ul>
+
+                <ul>
+                    <li> <a href="#direction" data-icon="location" id="nav_button">Direction</a> </li>
+                    <li> <a href="" data-icon="plus" id="nav_button">Save</a></li>
+                    <li> <a href="#nearby" data-icon="shop" id="nav_button">Nearby</a></li>
+                </ul>
+                <ul>
+                    <li> <a href="#history" data-icon="clock" id="nav_button">History</a></li>
+                    <li> <a href="#saved" data-icon="star" id="nav_button">Saved Places</a></li>
+                    <li> <a href="#help" data-icon="info" id="nav_button">Help Center</a></li>
+                </ul>
             </div>
-            <h4>Lingpengkun Developing User Interfaces </h4>
         </div>
     </div><!-- /page -->
 
@@ -67,17 +64,16 @@
 
         </div><!-- /header -->
 
-        <div id="direc-map" style="height: 550px; margin-top: 44px; margin-bottom: 100px;"></div>
+        <div id="direc-map" style="height: 80vh; margin-top: 44px; margin-bottom: 100px;"></div>
 
         <div data-role="footer"  id="bottom">
             <div data-role="navbar">
             <ul>
-                 <li> <a href="#history" data-icon="clock">History</a>
-                 <li> <a href="#saved" data-icon="star">Saved Places</a>
-                 <li> <a href="#help" data-icon="info">Help Center</a>
+                 <li> <a href="#history" data-icon="clock">History</a></li>
+                 <li> <a href="#saved" data-icon="star">Saved Places</a></li>
+                 <li> <a href="#help" data-icon="info">Help Center</a></li>
             </ul>
             </div>
-            <h4>Lingpengkun Developing User Interfaces </h4>
         </div>
     </div><!-- /page -->
 
@@ -93,15 +89,15 @@
         <div data-role="content" style="margin-bottom: 100px;">
             <div data-role="navbar">
                 <ul>
-                    <li> <a href="" style="height: 100px;">Restaurant</a>
-                    <li> <a href="" style="height: 100px;">Store</a>
-                    <li> <a href="" style="height: 100px;">Hotel</a>
+                    <li> <a href="" style="height: 100px;">Restaurant</a></li>
+                    <li> <a href="" style="height: 100px;">Store</a></li>
+                    <li> <a href="" style="height: 100px;">Hotel</a></li>
                 </ul>
 
                 <ul>
-                    <li> <a href="" style="height: 100px;">Parking Lot</a>
-                    <li> <a href="" style="height: 100px;">Gym</a>
-                    <li> <a href="" style="height: 100px;">Park</a>
+                    <li> <a href="" style="height: 100px;">Parking Lot</a></li>
+                    <li> <a href="" style="height: 100px;">Gym</a></li>
+                    <li> <a href="" style="height: 100px;">Park</a></li>
                 </ul>
             </div>
          
@@ -110,12 +106,11 @@
         <div data-role="footer"  id="bottom">
             <div data-role="navbar">
             <ul>
-                 <li> <a href="#history" data-icon="clock">History</a>
-                 <li> <a href="#saved" data-icon="star">Saved Places</a>
-                 <li> <a href="#help" data-icon="info">Help Center</a>
+                 <li> <a href="#history" data-icon="clock">History</a></li>
+                 <li> <a href="#saved" data-icon="star">Saved Places</a></li>
+                 <li> <a href="#help" data-icon="info">Help Center</a></li>
             </ul>
             </div>
-            <h4>Lingpengkun Developing User Interfaces </h4>
         </div>
     </div><!-- /page -->
 
